# snapemu-workflow

./: .gitmodules  Cargo.toml  README.md  install.sh  rustfmt.toml
.github/: pull-request-template.md
.github/workflows/: docker-publish.yml
SnapEmu-Device/: README.md
SnapEmu-Device/.github/workflows/: check.yml
SnapEmu-Device/device/Heltec/AB01/: AB01.json
common_define/: Cargo.toml
common_define/src/: client_id.rs  decode.rs  id.rs  key.rs  lib.rs  lora.rs  lorawan_bridge.rs  product.rs  time.rs
common_define/src/db/: addr.rs  data.rs  eui.rs  group_permission.rs  key.rs  map.rs  mod.rs
common_define/src/db/entities/: mod.rs  snap_admin.rs  snap_config.rs  snap_decode_script.rs  snap_device_authority.rs  snap_device_data.rs  snap_device_data_name.rs  snap_device_function.rs  snap_device_group.rs  snap_device_group_map_user.rs  snap_device_lora_gate.rs  snap_device_lora_node.rs  snap_device_map_group.rs  snap_device_mqtt.rs  snap_devices.rs  snap_downlink.rs  snap_integration_mqtt.rs  snap_product_info.rs  snap_snap_device.rs  snap_user_token.rs  snap_users.rs
common_define/src/event/: log.rs  lora_gateway.rs  lora_node.rs  mod.rs
device_info/src/: lib.rs  snap.rs
device_info/src/lorawan/: gateway.rs  mod.rs  node.rs
devices_manager/: Cargo.toml
devices_manager/src/: db.rs  decode.rs  lib.rs  load.rs  main.rs
devices_manager/src/event/: gateway.rs  mod.rs  platform.rs
devices_manager/src/integration/: mqtt.rs
devices_manager/src/man/: data.rs  decode.rs  device_active.rs  downlink.rs  gw.rs  influxdb.rs  lora.rs  mod.rs  mq.rs  mqtt.rs  redis_client.rs
devices_manager/src/mqtt/: down.rs  mod.rs
devices_manager/src/protocol/: mod.rs
devices_manager/src/protocol/lora/: data.rs  join_accept.rs  join_request.rs  parse.rs  payload.rs
devices_manager/src/protocol/lora/source/: udp.rs
devices_manager/src/protocol/mqtt/: mod.rs
devices_manager/src/protocol/mqtt/server/: alert.rs  broker.rs  connection.rs  iobufs.rs  link.rs  local.rs  log.rs  mod.rs  network.rs  router.rs  scheduler.rs  server.rs  tls.rs
devices_manager/src/protocol/mqtt/version/: mod.rs
devices_manager/src/protocol/mqtt/version/v3/: connect.rs  mod.rs
devices_manager/src/protocol/mqtt/version/v4/: mod.rs
devices_manager/src/protocol/mqtt/version/v5/: connect.rs  mod.rs
devices_manager/src/protocol/snap/: gateway.rs  mod.rs  payload.rs
devices_manager/src/service/: custom_gateway.rs  data_decode.rs  device.rs  gateway_statue.rs  lorawan_gateway.rs  lorawan_node.rs  mod.rs
hash_name/src/: lib.rs
migration/src/: lib.rs  m20240904_020441_create_table.rs
snap_api/: Cargo.toml
snap_api/src/: error.rs  gw_conf.rs  lib.rs  load.rs  local_key.rs  main.rs
snap_api/src/api/: mod.rs
snap_api/src/api/restful/: app.rs  contact.rs  data.rs  decode.rs  mod.rs  verify.rs
snap_api/src/api/restful/admin/: config.rs  device.rs  group.rs  log.rs  login.rs  mod.rs  product.rs  user.rs
snap_api/src/api/restful/device/: config.rs  devices.rs  down.rs  group.rs  io.rs  log.rs  map.rs  mod.rs  order.rs  product.rs  query.rs
snap_api/src/api/restful/integration/: mod.rs  mqtt.rs
snap_api/src/api/restful/show/: device.rs  mod.rs
snap_api/src/api/restful/user/: delete.rs  info.rs  login.rs  mod.rs  picture.rs  refresh.rs  signup.rs
snap_api/src/cache/: device_cache.rs  device_group_cache.rs  mod.rs  product_name_cache.rs
snap_api/src/man/: device_predefine.rs  email.rs  influxdb.rs  mod.rs  node_event.rs  redis_client.rs  sync_device.rs  user_manager.rs  user_status.rs
snap_api/src/service/: mod.rs  mqtt.rs  snap.rs
snap_api/src/service/data/: mod.rs  query.rs  update.rs
snap_api/src/service/decode/: mod.rs  script.rs  test.rs
snap_api/src/service/device/: define.rs  device.rs  function.rs  group.rs  mod.rs  order.rs
snap_api/src/service/integration/: mod.rs  mqtt.rs
snap_api/src/service/lorawan/: gateway.rs  node.rs
snap_api/src/service/user/: auth.rs  info.rs  login.rs  mod.rs  signup.rs  token.rs
snap_api/src/utils/: base64.rs  check.rs  mod.rs  model.rs  passwd.rs
snap_config/: Cargo.toml
snap_config/src/: lib.rs  load.rs
snap_i18n/src/: lib.rs
snap_model/: Cargo.toml
snap_model/src/: lib.rs
snap_proto/: Cargo.toml  build.rs
snap_proto/proto/: manager.proto
snap_proto/src/: event.rs  lib.rs
utils/src/: base64.rs  eui.rs  lib.rs  log_down.rs
