[workspace]
resolver = "2"
members = [
    "devices_manager",
    "snap_api",
    "snap_model",
    "utils",
    "common_define",
    "snap_config",
    "snap_i18n",
    "device_info",
    "migration",
    "hash_name",
    "snap_proto"
]

[workspace.dependencies]
snap_config = { path = "./snap_config" }
device_info = { path = "./device_info" }
snap_model = { path = "./snap_model" }
snap_proto = { path = "./snap_proto" }
snap_i18n = { path = "./snap_i18n" }
utils = { path = "./utils" }
common_define = { path = "./common_define" }
migration = { path = "./migration" }
hash_name = { path = "./hash_name" }
accept-language = "3.1.0"
aes = "0.8.4"
arc-swap = "1.7.1"
axum = "0.7.5"
axum-extra = "0.9.3"
anyhow = "1"
async-channel = "1.9"
async-graphql = "7.0.6"
async-graphql-axum = "7.0.6"
async-graphql-value = "7.0.6"
async-trait = "0.1.68"
base64 = "0.21"
bytes = "1.6.0"
chrono = "0.4.38"
config = "0.13.4"
cmac = "0.7.2"
clap = "4.5.20"
ctr = "0.9.2"
const_format = "0.2"
rustls-native-certs = "0.7.0"
image = "0.25.1"
derive_more = "0.99"
derive-new = "0.6.0"
derive_builder = "0.12"
futures = "0.3"
futures-util = "0.3.31"
generic-array = "0.14"
deadpool = "0.12.1"
deadpool-redis = "0.16.0"
jwt = "0.16.0"
hex = "0.4"
hmac-sha1 = "0.2"
language-tags = "0.3.2"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls","hostname", "pool", "builder"] }
lorawan = "0.7.3"
influxdb2 = { version = "0.5.2", default-features = false, features = [ "rustls" ] }
influxdb2-structmap = "0.2"
influxdb2-derive = "0.1.1"
num-traits = "0.2"

md5="0.7"
num_enum = "0.7.2"
once_cell = "1.18"
rumqttc = "0.24.0"
pin-project-lite = "0.2"
rquickjs = "0.9.0"

rand = "0.8"
redis = "0.26.1"
redis-derive = "0.1"
redis-macros = "0.4.0"
reqwest = { version = "0.11", default-features = false, features = [ "rustls-tls-native-roots"] }
rsa = "0.9"
rust-i18n = "3.0.1"
rust-embed = "8"
itertools = "0.13.0"
x509-parser = "0.17.0"
tokio-rustls = "0.26.1"
rustls-pemfile = "2.1.1"
async-tungstenite = "0.25.1"
ws_stream_tungstenite = "0.13.0"
parking_lot = "0.12.3"
flume = "0.11.1"
tokio-util = "0.7.10"
slab = "0.4.9"
socket2 = "0.5.6"
serde = "1"
serde_json = "1"
serde_repr = "0.1.19"
hmac = "0.12.1"
sha2 = "0.10"
sha1 = "0.10"
strum = "0.25"
strum_macros = "0.25"
sea-orm = "1.0.1"
sea-orm-migration = "1.0.1"

tap = "1"
tokio = "1.35.1"
tokio-stream = "0.1.14"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
tower-http = "0.5.0"
quote = "1.0.37"
syn = "2.0.77"

uuid = "1.3"
utoipa-scalar = { version = "0.2.0", features = ["axum"] }
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-axum = { version = "0.1.2" }

tonic = "0.13.1"
prost = "0.13.5"
tonic-build = "0.13.1"

